dealtrak-kubernetes/php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
  labels:
    app: php-fpm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
        - image: 375550435474.dkr.ecr.eu-west-2.amazonaws.com/php-fpm:latest
          name: php-k8s-demo-php-fpm
          ports:
            - containerPort: 9000
              name: php-fpm
#            - containerPort: 9001
#              name: php-xdebug
#          volumeMounts:
#            - name: php-persistent-storage
#              mountPath: /var/www/html
#      volumes:
#        - name: php-persistent-storage
#          persistentVolumeClaim:
#            claimName: php-fpm-volumeclaim
