dealtrak-kubernetes/xdebug-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdebug-proxy
  labels:
    app: xdebug-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xdebug-proxy
  template:
    metadata:
      labels:
        app: xdebug-proxy
    spec:
      containers:
        - image: myparcel/dbgp-proxy
          name: php-k8s-demo-xdebug-proxy
          ports:
            - containerPort: 9010
              name: xdebug-proxy
            - containerPort: 9001
              name: xdebug-ide
