dealtrak-kubernetes/xdebug-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xdebug-proxy
  name: xdebug-proxy
spec:
  type: ClusterIP
  ports:
    - port: 9010
      targetPort: 9010
      protocol: TCP
  selector:
    app: xdebug-proxy
